feat: render film names

--- a/css/global.css
+++ b/css/global.css
@@ -8,7 +8,7 @@
   
   /* Section Header Content */
   .header-container {
-    background-color: #DDDDDD;
+    background-color: #109cea;
     text-align: center;
     padding: 6rem 1rem;
   }
