--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: Roboto, Arial, Helvetica, sans-serif;
     font-size: 1rem;
     font-weight: 500;
     line-height: 1.1;
@@ -18,7 +18,8 @@ body {
   }
   
   h1 {
-    font-size: 2.5rem;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 5rem;
     font-weight: 600;
   }
   
@@ -44,9 +45,14 @@ body {
     font-weight: 500;
     line-height: 1.5;
   }
-  
-  
+
   button {
+    font-family: "Bebas Neue", sans-serif;
     font-size: 1rem;
     font-weight: 500;
   }
+
+  select {
+    font-family: "Nanum Myeongjo", serif;
+    font-size: 1.15rem;
+}
