--- a/css/fonts.css
+++ b/css/fonts.css
@@ -24,6 +24,7 @@ body {
   }
   
   h2 {
+    font-family: "Nanum Myeongjo", serif;
     font-size: 1.5rem;
     font-weight: 500;
   }
@@ -41,14 +42,14 @@ body {
   }
   
   p {
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 500;
     line-height: 1.5;
   }
 
   button {
     font-family: "Bebas Neue", sans-serif;
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 500;
   }
 
