--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+img {
+  max-width: 100%;
+}
+
 .card-container {
     display: flex;
     flex-wrap: wrap;
@@ -10,6 +14,11 @@
   box-shadow: 0rem 0.125rem 1.5rem rgb(0 0 0 / 12%);
   width: 100%;
   flex: 1 0 45%;
+}
+
+.card:hover {
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  transform: translateY(-1px);
 }
 
 .card-content {
@@ -28,7 +37,7 @@
 select {
   position: relative;
   width: 100%;
-  padding: 0.675em 6em 0.675em 1em;
+  padding: 0.8em 6em 0.8em 1em;
   background-color: #109eea19;
   border: 2px solid #caced1;
   border-radius: 0.25rem;
