--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 img {
+  border-radius: 0.25rem;
   max-width: 100%;
 }
 
@@ -10,14 +11,14 @@ img {
 
 .card {
   background-color: #109cea;
-  border-radius: 4px;
+  border-radius: 0.25rem;
   box-shadow: 0rem 0.125rem 1.5rem rgb(0 0 0 / 12%);
   width: 100%;
   flex: 1 0 45%;
 }
 
 .card:hover {
-  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  box-shadow: rgba(0, 0, 0, 0.301) 0 4px 12px;
   transform: translateY(-1px);
 }
 
@@ -26,7 +27,7 @@ img {
 }
 
 .card-text {
-  font-style: italic;
+  font-family: "Nanum Myeongjo", serif;
 }
 
 .header,
@@ -70,3 +71,16 @@ button:active {
   transform: translateY(0);
 }
 
+/* Mobile (max-width: 768px): 1 × 9 (full width cards)*/
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+}
+
+/* Tablet (min-width: 768px): 2 × 4 (50% width cards, last card is full width) */
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+  h1 {
+    font-size: 3.5rem;
+  }
+}
